--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,7 @@
       <div class="col-sm-6 d-flex align-items-center justify-content-center">
         <form (ngSubmit)="onSubmit()" class="w-75">
           <div class="form-group mb-3">
-            <label class="form-label" for="default-04">User Name</label>
+            <label class="form-label" for="default-04">Email</label>
             <div class="form-control-wrap">
               <div class="form-icon form-icon-right">
                 <em class="icon ni ni-mail"></em>
@@ -16,9 +16,9 @@
                 type="text"
                 class="form-control"
                 id="default-04"
-                [(ngModel)]="username"
-                name="username"
-                placeholder="Enter Username"
+                [(ngModel)]="email"
+                name="email"
+                placeholder="Enter Email"
               />
             </div>
           </div>
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="form-group mb-3">
-            <label class="form-label" for="default-04">Role</label>
+            <label class="form-label" for="default-04">Confirm Password</label>
             <div class="form-control-wrap">
               <div class="form-icon form-icon-right">
                 <em class="icon ni ni-lock"></em>
@@ -49,9 +49,9 @@
                 type="text"
                 class="form-control"
                 id="default-05"
-                [(ngModel)]="role"
-               name="role"
-                placeholder="Enter Role"
+                [(ngModel)]="c_password"
+               name="c_password"
+                placeholder="Enter Confirm Password"
               />
             </div>
           </div>
