Created a layout for dashboard

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -46,7 +46,7 @@
                 <em class="icon ni ni-lock"></em>
               </div>
               <input
-                type="text"
+                type="password"
                 class="form-control"
                 id="default-05"
                 [(ngModel)]="c_password"
@@ -62,7 +62,7 @@
           </div>
   
           <!-- Submit Button -->
-          <button type="submit" class="btn btn-primary w-100">Login</button>
+          <button type="submit" class="btn btn-primary w-100">Register</button>
         </form>
       </div>
     </div>
