created auth layout for auth components

--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="nk-wrap "> -->
     <!-- main header @s -->
-    <div class="nk-header nk-header-fixed is-light">
+    <div class="nk-header nk-header-fixed is-light topbarcontent">
         <div class="container-fluid">
             <div class="nk-header-wrap">
                 <div class="nk-menu-trigger d-xl-none ms-n1">
