--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,18 +1,6 @@
+<div class="auth-container">
+  
+  <router-outlet></router-outlet>
+</div>
 
-  <div class="nk-body bg-lighter npc-general has-sidebar ">
-  <div class="nk-app-root">
-    <div class="nk-main ">
-      <app-sidebar></app-sidebar> 
-
-      <div class="nk-wrap ">
-        <app-topbar></app-topbar> 
-        <div class="nk-content ">
-          <ng-content></ng-content> 
-        </div>
-       <div class="nk-footer"></div>
-      
-      
-      
-      </div>
-    </div></div>
-  </div>
+ 
