--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,54 +1,78 @@
 <div class="container vh-100">
-    <div class="row h-100">
-      <!-- Left Column (Background Image) -->
-      <div class="col-sm-6 background"></div>
-  
-      <!-- Right Column (Form) -->
-      <div class="col-sm-6 d-flex align-items-center justify-content-center">
-        <form (ngSubmit)="onLogin()" class="w-75">
-          <div class="form-group mb-3">
-            <label class="form-label" for="default-04">User Name</label>
-            <div class="form-control-wrap">
-              <div class="form-icon form-icon-right">
-                <em class="icon ni ni-mail"></em>
-              </div>
-              <input
-                type="text"
-                class="form-control"
-                id="default-04"
-                [(ngModel)]="username"
-                name="username"
-                placeholder="Enter Username"
-              />
+  <div class="row h-100">
+    <!-- Left Column (Background Image) -->
+    <div class="col-sm-6 background"></div>
+
+    <!-- Right Column (Form) -->
+    <div class="col-sm-6 d-flex align-items-center justify-content-center">
+      <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="w-75">
+        
+        <!-- Username Field -->
+        <div class="form-group mb-3">
+          <label class="form-label" for="username">User Name</label>
+          <div class="form-control-wrap">
+            <input
+              type="email"
+              class="form-control"
+              id="username"
+              formControlName="username"
+              placeholder="Enter Email"
+            />
+            <div *ngIf="loginForm.controls['username'].invalid && loginForm.controls['username'].touched">
+              <small *ngIf="loginForm.controls['username'].errors?.['required']" class="text-danger">
+                Email is required.
+              </small>
+              <small *ngIf="loginForm.controls['username'].errors?.['email']" class="text-danger">
+                Enter a valid email.
+              </small>
             </div>
           </div>
-  
-          <div class="form-group mb-3">
-            <label class="form-label" for="default-04">Password</label>
-            <div class="form-control-wrap">
-              <div class="form-icon form-icon-right">
-                <em class="icon ni ni-lock"></em>
-              </div>
-              <input
-                type="password"
-                class="form-control"
-                id="default-04"
-                [(ngModel)]="password"
-                name="password"
-                placeholder="Enter Password"
-              />
+        </div>
+
+        <!-- Password Field -->
+        <div class="form-group mb-3">
+          <label class="form-label" for="password">Password</label>
+          <div class="form-control-wrap">
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              formControlName="password"
+              placeholder="Enter Password"
+            />
+            <div *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
+              <small *ngIf="loginForm.controls['password'].errors?.['required']" class="text-danger">
+                Password is required.
+              </small>
+              <small *ngIf="loginForm.controls['password'].errors?.['minlength']" class="text-danger">
+                Password must be at least 6 characters long.
+              </small>
             </div>
           </div>
-  
-          <!-- Error Message -->
-          <div *ngIf="errorMessage" class="alert alert-danger">
-            {{ errorMessage }}
-          </div>
-  
-          <!-- Submit Button -->
-          <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
-      </div>
+        </div>
+
+        <!-- Error Message -->
+      
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary btnPadding w-100" [disabled]="loginForm.invalid"><span *ngIf="isLoading">
+          <i class="fa fa-spinner fa-spin"></i> Processing...
+        </span>
+        <span *ngIf="!isLoading">
+          Login
+        </span></button>
+        <div class="flex justify-center mt-4">
+          <img src="assets/facebook.svg" alt="Facebook" width="40" />
+          <img src="assets/google.svg" alt="Google" width="40" class="mx-3" />
+          <img src="assets/apple.svg" alt="Apple" width="40" />
+        </div>
+        <p class="leading-7 mt-2 text-center text-gray-100 text-xl md:text-2xl font-jakarta font-normal">
+          Don't have an account?
+          <a href="/auth/register" class="text-blue-700 font-medium">Signup</a>
+        </p>
+      </form>
+     
     </div>
+    
   </div>
-  
+</div>
