--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,70 +1,109 @@
 <div class="container vh-100">
-    <div class="row h-100">
-      <!-- Left Column (Background Image) -->
-      <div class="col-sm-6 background"></div>
-  
-      <!-- Right Column (Form) -->
-      <div class="col-sm-6 d-flex align-items-center justify-content-center">
-        <form (ngSubmit)="onSubmit()" class="w-75">
-          <div class="form-group mb-3">
-            <label class="form-label" for="default-04">Email</label>
-            <div class="form-control-wrap">
-              <div class="form-icon form-icon-right">
-                <em class="icon ni ni-mail"></em>
-              </div>
-              <input
-                type="text"
-                class="form-control"
-                id="default-04"
-                [(ngModel)]="email"
-                name="email"
-                placeholder="Enter Email"
-              />
+  <div class="row h-100">
+    <!-- Left Column (Background Image) -->
+    <div class="col-sm-6 background"></div>
+
+    <!-- Right Column (Form) -->
+    <div class="col-sm-6 d-flex align-items-center justify-content-center">
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="w-75">
+        
+        <!-- Email Field -->
+        <div class="form-group mb-3">
+          <label class="form-label" for="email">Email</label>
+          <div class="form-control-wrap">
+            <div class="form-icon form-icon-right">
+              <em class="icon ni ni-mail"></em>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              formControlName="email"
+              placeholder="Enter Email"
+            />
+            <div *ngIf="registerForm.controls['email'].invalid && registerForm.controls['email'].touched">
+              <small *ngIf="registerForm.controls['email'].errors?.['required']" class="text-danger">
+                Email is required.
+              </small>
+              <small *ngIf="registerForm.controls['email'].errors?.['email']" class="text-danger">
+                Enter a valid email.
+              </small>
             </div>
           </div>
-  
-          <div class="form-group mb-3">
-            <label class="form-label" for="default-04">Password</label>
-            <div class="form-control-wrap">
-              <div class="form-icon form-icon-right">
-                <em class="icon ni ni-lock"></em>
-              </div>
-              <input
-                type="password"
-                class="form-control"
-                id="default-04"
-                [(ngModel)]="password"
-                name="password"
-                placeholder="Enter Password"
-              />
+        </div>
+
+        <!-- Password Field -->
+        <div class="form-group mb-3">
+          <label class="form-label" for="password">Password</label>
+          <div class="form-control-wrap">
+            <div class="form-icon form-icon-right">
+              <em class="icon ni ni-lock"></em>
+            </div>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              formControlName="password"
+              placeholder="Enter Password"
+            />
+           <!-- Password Validation -->
+<div *ngIf="registerForm.controls['password'].invalid && registerForm.controls['password'].touched">
+  <small *ngIf="registerForm.controls['password'].errors?.['required']" class="text-danger">
+    Password is required.
+  </small>
+  <small *ngIf="registerForm.controls['password'].errors?.['minlength']" class="text-danger">
+    Password must be at least 6 characters long.
+  </small>
+</div>
+
+          </div>
+        </div>
+
+        <!-- Confirm Password Field -->
+        <div class="form-group mb-3">
+          <label class="form-label" for="c_password">Confirm Password</label>
+          <div class="form-control-wrap">
+            <div class="form-icon form-icon-right">
+              <em class="icon ni ni-lock"></em>
+            </div>
+            <input
+              type="password"
+              class="form-control"
+              id="c_password"
+              formControlName="c_password"
+              placeholder="Enter Confirm Password"
+            />
+            <div *ngIf="registerForm.controls['c_password'].invalid && registerForm.controls['c_password'].touched">
+              <small *ngIf="registerForm.controls['c_password'].errors?.['required']" class="text-danger">
+                Confirm Password is required.
+              </small>
+            </div>
+            <div *ngIf="registerForm.errors?.['passwordMismatch']">
+              <small class="text-danger">Passwords do not match.</small>
             </div>
           </div>
-          <div class="form-group mb-3">
-            <label class="form-label" for="default-04">Confirm Password</label>
-            <div class="form-control-wrap">
-              <div class="form-icon form-icon-right">
-                <em class="icon ni ni-lock"></em>
-              </div>
-              <input
-                type="password"
-                class="form-control"
-                id="default-05"
-                [(ngModel)]="c_password"
-               name="c_password"
-                placeholder="Enter Confirm Password"
-              />
-            </div>
-          </div>
-  
-          <!-- Error Message -->
-          <div *ngIf="errorMessage" class="alert alert-danger">
-            {{ errorMessage }}
-          </div>
-  
-          <!-- Submit Button -->
-          <button type="submit" class="btn btn-primary w-100">Register</button>
-        </form>
-      </div>
+        </div>
+
+        <!-- Error Message -->
+       
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary btnPadding w-100" [disabled]="registerForm.invalid"><span *ngIf="isLoading">
+          <i class="fa fa-spinner fa-spin"></i> Registering...
+        </span>
+        <span *ngIf="!isLoading">
+          Register
+        </span></button>
+        <div class="flex justify-center mt-4">
+          <img src="assets/facebook.svg" alt="Facebook" width="40" />
+          <img src="assets/google.svg" alt="Google" width="40" class="mx-3" />
+          <img src="assets/apple.svg" alt="Apple" width="40" />
+        </div>
+        <p class="leading-7 mt-2 text-center text-gray-100 text-xl md:text-2xl font-jakarta font-normal">
+          Already have an account?
+          <a href="/auth/login" class="text-blue-700 font-medium">Login</a>
+        </p>
+      </form>
     </div>
   </div>
-  
+</div>
