--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
                     <li class="nk-menu-item">
                         <a href="html/index.html" class="nk-menu-link">
                             <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
-                            <span class="nk-menu-text">Default Dashboard</span>
+                            <span class="nk-menu-text">Events</span>
                         </a>
                     </li><!-- .nk-menu-item -->
                     <li class="nk-menu-item">
