--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,78 @@
 
 <div>
+    <div class="nk-block-head">
+        <div class="nk-block-head-content">
+            <h4 class="nk-block-title">Data Table</h4>
+            <div class="justify-end">
+                <button type="button" class="btn btn-primary" (click)="openModal()">Add Event</button>
 
-<app-data-table class="mt-2"></app-data-table>
+            </div>
+        </div>
+    </div>
+    <div  class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-top" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal Title</h5>
+                    <a href="#" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <em class="icon ni ni-cross"></em>
+                    </a>
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="eventForm" (ngSubmit)="saveEvent()" class="w-75">
+                    <div class="form-group mb-3">
+                        <label class="form-label" for="username">Event Name</label>
+                        <div class="form-control-wrap">
+                            <input
+                            type="text"
+                class="form-control"
+                id="eventName"
+                formControlName="eventName"
+                placeholder="Enter Event Name"
+                          />
+                          <div *ngIf="eventForm.controls['eventName'].invalid && eventForm.controls['eventName'].touched">
+                            <small *ngIf="eventForm.controls['eventName'].errors?.['required']" class="text-danger">
+                              Event Name is required.
+                            </small>
+                            
+                          </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="form-label" for="username">Event Description</label>
+                        <div class="form-control-wrap">
+                            <input
+                            type="text"
+                class="form-control"
+                id="eventDescription"
+                formControlName="eventDescription"
+                placeholder="Enter Event Description"
+                          />
+                          <div *ngIf="eventForm.controls['eventDescription'].invalid && eventForm.controls['eventDescription'].touched">
+                            <small *ngIf="eventForm.controls['eventDescription'].errors?.['required']" class="text-danger">
+                              Event Description is required.
+                            </small>
+                            
+                          </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Datepicker</label>
+                        <div class="form-control-wrap">
+                            <input type="date"  id="eventDate"
+                            formControlName="eventDate" class="form-control date-picker">
+                        </div>
+                    </div>
+                <button type="submit" class="btn btn-primary" [disabled]="eventForm.invalid" >Save Event</button>
+
+                    </form>
+                   </div>
+                <div class="modal-footer bg-light">
+                    <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
+            
+                </div>
+            </div>
+        </div>
+    </div>
+<app-data-table class="mt-2"  [events]="events"></app-data-table>
 </div>
