--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -18,15 +18,15 @@
                   
                  
                     <li class="nk-menu-item">
-                        <a href="html/index.html" class="nk-menu-link">
+                        <a href="/dashboard/events" class="nk-menu-link">
                             <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
                             <span class="nk-menu-text">Events</span>
                         </a>
                     </li><!-- .nk-menu-item -->
                     <li class="nk-menu-item">
-                        <a href="html/index-crypto.html" class="nk-menu-link">
+                        <a href="dashboard/users" class="nk-menu-link">
                             <span class="nk-menu-icon"><em class="icon ni ni-bitcoin-cash"></em></span>
-                            <span class="nk-menu-text">Crypto Dashboard</span>
+                            <span class="nk-menu-text">Users</span>
                         </a>
                     </li><!-- .nk-menu-item -->
                     <li class="nk-menu-item">
