--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -28,15 +28,15 @@
                 <div class="nk-header-tools">
                     <ul class="nk-quick-nav">
                        
-                        <li class="dropdown user-dropdown">
+                        <li class="dropdown user-dropdown flex justify-end">
                             <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
                                 <div class="user-toggle">
                                     <div class="user-avatar sm">
                                         <em class="icon ni ni-user-alt"></em>
                                     </div>
                                     <div class="user-info d-none d-md-block">
-                                        <div class="user-status">Administrator</div>
-                                        <div class="user-name dropdown-indicator">Abu Bin Ishityak</div>
+                                        <div class="user-status text-capitalize">{{userRole }}</div>
+                                        <div class="user-name dropdown-indicator">{{userName}}</div>
                                     </div>
                                 </div>
                             </a>
@@ -47,20 +47,18 @@
                                             <span>AB</span>
                                         </div>
                                         <div class="user-info">
-                                            <span class="lead-text">Abu Bin Ishtiyak</span>
-                                            <span class="sub-text">info@softnio.com</span>
+                                            <span class="lead-text">{{userName}}</span>
+                                            <span class="sub-text">{{userEmail }}</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="dropdown-inner">
                                     <ul class="link-list">
-                                        <li><a href="html/user-profile-regular.html"><em class="icon ni ni-user-alt"></em><span>View Profile</span></a></li>
-                                        <li><a class="dark-switch" href="#"><em class="icon ni ni-moon"></em><span>Dark Mode</span></a></li>
                                     </ul>
                                 </div>
                                 <div class="dropdown-inner">
                                     <ul class="link-list">
-                                        <li><a href="#"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+                                        <li (click)="logout()"><a href="#"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
                                     </ul>
                                 </div>
                             </div>
