--- a/src/app/layout/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/layout/dashboard-layout/dashboard-layout.component.css
@@ -1,3 +1,7 @@
+
 .content{
-    margin-top: 10px;
+    margin-left: 280px;
+    margin-top: 100px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
