--- a/src/dashlite.css
+++ b/src/dashlite.css
@@ -30607,7 +30607,7 @@ body.nav-shown {
 }
 @media (min-width: 576px) {
   .nk-header {
-    padding: 0 22px;
+    padding: 0 0 0 22px;
   }
   .nk-quick-nav {
     margin: 0 -10px;
